# re-zero

./: .gitignore  PLANNING.md  README.md
action/: action.yml
hardware/drone/drone_bridge_re/: Makefile  PROTOCOL.md  README.md  drone_protocol.md  pyproject.toml
hardware/drone/drone_bridge_re/bridge/: __init__.py  bridge.py  serial_frame.py
hardware/drone/drone_bridge_re/drone_bridge_re.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hardware/drone/drone_bridge_re/esp32_ap/: esp32_ap.ino  serial_frame.h
hardware/drone/drone_bridge_re/esp32_sta/: esp32_sta.ino  forward_types.h  serial_frame.h
hardware/drone/drone_bridge_re/logs/: bridge_1771133704.jsonl  bridge_1771134198.jsonl  bridge_1771134707.jsonl  bridge_1771135354.jsonl  bridge_1771135378.jsonl  bridge_1771135414.jsonl  bridge_1771135601.jsonl  bridge_1771135789.jsonl  bridge_1771136751.jsonl  bridge_1771136924.jsonl  bridge_1771137269.jsonl  bridge_1771137308.jsonl  bridge_1771137320.jsonl  bridge_1771138105.jsonl  bridge_1771138510.jsonl  bridge_1771138560.jsonl  bridge_1771138816.jsonl  bridge_1771138943.jsonl  bridge_1771139165.jsonl  bridge_1771139179.jsonl  bridge_1771147972.jsonl  bridge_1771148051.jsonl  bridge_1771148106.jsonl  bridge_1771148126.jsonl  bridge_1771148180.jsonl  bridge_1771148276.jsonl  bridge_1771148312.jsonl  bridge_1771148336.jsonl  bridge_1771148410.jsonl  bridge_1771149248.jsonl  bridge_1771149271.jsonl  bridge_1771149311.jsonl  bridge_1771149499.jsonl  buttons.txt  estop.txt  estop_command.txt  forward_backward_trim.txt  gravity_sensor.txt  gyro_calibrate.txt  headless.txt  (+50 more)
(+118 files in other folders)
