[project]
name = "drone-bridge-re"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pyserial>=3.5",
]

[project.scripts]
drone-bridge = "bridge.bridge:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bridge"]

[tool.uv]
package = true
